# fastapi-micro

./: .gitignore  CACHE_REFACTOR.md  CLEANUP_SUMMARY.md  DOCKER_README.md  Dockerfile  Dockerfile.gateway  Dockerfile.service  MICROSERVICES_ARCHITECTURE.md  Makefile  OAUTH2_README.md  README.md  TESTING_GUIDE.md  alembic.ini  docker-compose.yml  env  init-db.sql  main.py  oauth_test.html  pyproject.toml  pyrightconfig.json  pytest.ini
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_sample_data.py  003_create_users_table.py  004_create_users_table.py
gateway/: main.py
services/notification-service/: main.py
services/task-service/: main.py
services/user-service/: main.py
src/: dependencies.py  event_bus.py  fixtures.py  settings.py
src/database/: __init__.py  config.py  models.py  redis_config.py  seeder.py
src/fixtures/: __init__.py  tasks.py
src/handlers/: __init__.py  advanced_async.py  async_tasks.py  auth.py  oauth.py  ping.py  redis_health.py  routers.py  tasks.py  users.py
src/schemas/: __init__.py  oauth.py  tasks.py  user.py
src/services/: __init__.py  async_task_service.py  auth_cache.py  auth_service.py  google_oauth_service.py  task_cache.py  task_service.py  user_cache.py  user_service.py
src/services/integration/: __init__.py  service_orchestrator.py
src/services/notification/: __init__.py
src/services/task/: __init__.py
src/services/task/domain/: __init__.py  (+3 more)
src/services/user/: __init__.py
src/shared/: __init__.py  events.py  kafka_client.py
src/utils/: cache_utils.py  security.py
tests/: __init__.py
(+23 files in other folders)
