[project]
name = "fastapi-micro"
version = "0.1.0"
description = ""
authors = [
    {name = "Anatoly",email = "anatoly.boronilov@megafon.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "email-validator (>=2.2.0,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "asyncpg>=0.29.0",
    "asyncio>=3.4.3",
    "aiokafka>=0.9.0",
    "confluent-kafka>=2.3.0"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.403"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
